objects/LBI__ActivityRecommendation__c.object
<CustomObject>
    <fields>
        <fullName>LBI__AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lattice Activity Recommendations</relationshipLabel>
        <relationshipName>LatticeActivityRecommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Activity__c</fullName>
        <label>Lattice Activity</label>
        <referenceTo>LBI__Activity__c</referenceTo>
        <relationshipLabel>Lattice Activity Recommendations</relationshipLabel>
        <relationshipName>ActivityRecommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__ContactName__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lattice Activity Recommendations</relationshipLabel>
        <relationshipName>LatticeActivityRecommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__DisqualificationReasonDetails__c</fullName>
        <label>Disqualification Reason Details</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__DisqualificationReason__c</fullName>
        <label>Disqualification Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LBI__LeadName__c</fullName>
        <label>Lead Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lattice Activity Recommendations</relationshipLabel>
        <relationshipName>LatticeActivityRecommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Likelihood__c</fullName>
        <label>Lattice Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__OldStatus__c</fullName>
        <label>Old Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayName__c</fullName>
        <label>Play Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayType__c</fullName>
        <label>Play Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Rank__c</fullName>
        <label>Lattice Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RecommendationName__c</fullName>
        <label>Recommendation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Recommendation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommendation</label>
        <referenceTo>LBI__Recommendation__c</referenceTo>
        <relationshipLabel>Lattice Activity Recommendations</relationshipLabel>
        <relationshipName>LatticeActivityRecommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__StatusChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Change?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__WorkflowType__c</fullName>
        <label>Workflow Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lattice Activity Recommendation</label>
    <nameField>
        <displayFormat>LAR-{0000000000}</displayFormat>
        <label>Lattice Activity Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Activity Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>